# mayors-causal-inference

./: README.md  environment.yml  pyproject.toml
src/: const.py  data_preprocess.ipynb  get_data_funcs.py  matching.ipynb  plots.ipynb  sandbox.ipynb
src/analyze/: analyze.ipynb  exploration.ipynb  plot_funcs.py  run.py  run_debug.py
src/data/: all.csv  all.xlsx  all_cleaned.csv  all_cleaned_merged.csv  all_cleaned_with_mayors_data.csv  authority_id_name.csv  columns_format.xlsx  inference_features_df.csv  inference_features_df_imputed.csv  matching_features_df.csv  mayors.xlsx  mayors_cleaned.csv  muni_names_to_code_mapping.csv  new_cols_names.xlsx  temp_cumulative_deficit.csv
src/diff_in_diff/: diff_in_diff_funcs.py
src/matching/: create_vecs.py  matching_funcs.py
src/results/diff/: compare_based_on_k=2_euclidean.csv  step_1_based_on_k=2_euclidean.csv  step_2_based_on_k=2_euclidean.csv
src/results/diff/annual_surplus_deficit/: did_results_placebo=False_imputed=False_k=10_cosine.csv  did_results_placebo=False_imputed=True_k=10_cosine.csv  (+2 more)
src/results/knn/: knn_results_k=10_cosine.csv  knn_results_k=10_cosine_placebo=True.csv  knn_results_k=2_cosine.csv  knn_results_k=2_euclidean.csv  knn_results_k=2_manhattan.csv  knn_results_k=3_cosine.csv  knn_results_k=3_euclidean.csv  knn_results_k=3_jaccard.csv  knn_results_k=3_manhattan.csv  knn_results_k=3_minkowski.csv  knn_results_k=4_cosine.csv  knn_results_k=5_cosine.csv  knn_results_k=6_cosine.csv  knn_results_k=7_cosine.csv  knn_results_k=8_cosine.csv  knn_results_k=9_cosine.csv  placebo_targets.csv
(+115 files in other folders)
